--- a/index.css
+++ b/index.css
@@ -1,9 +1,28 @@
+*{
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style: none;
+}
 body{
     height: 100%;
     width: 100%;
     background-color: black;
+    color: deeppink;
 }
 h1{
     color: deeppink;
     text-align: center;
+    font-size: 20px
 }
+ol{
+    display: flex;
+    justify-content: center;
+    margin: 20px auto;   
+    font-size: 30px
+
+}
+li{
+    margin: 0 20px;
+}
+
