--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
     position: fixed;
     height: 100%;
     width: 100%;
-    background-color: #23a9f2;
+    /* background-color: #23a9f2; */
 }
 
 #app {
